Bug 285506 - Presets for UMS Folder/Filename are not saved
Summary: Presets for UMS Folder/Filename are not saved
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/USB mass storage and MSC (other bugs)
Version First Reported In: 2.4-GIT
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-01 19:53 UTC by simon
Modified: 2011-12-20 11:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2011-11-01 19:53:45 UTC
Version:           2.4-GIT (using Devel) 
OS:                Linux

hi,

the actual tokens are remmebered but saving to a preset gets lost after restart

Reproducible: Always

Steps to Reproduce:
click a scheme together, save as preset


Expected Results:  
appear in dropdownbox after restart

OS: Linux (x86_64) release 2.6.38-tuxonice-r1
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Myriam Schweingruber 2011-11-02 09:29:38 UTC
There have been changes in the last few days, is this with the latest build?
Comment 2 simon 2011-11-02 09:58:20 UTC
yep
Comment 3 Myriam Schweingruber 2011-11-02 11:54:17 UTC
Thank you for the fast feedback.
Comment 4 Bart Cerneels 2011-11-03 22:12:56 UTC
Git commit 232e7bdbeaa7ee2bd449c96039fe5832bfc022c8 by Bart Cerneels.
Committed on 03/11/2011 at 21:31.
Pushed by shanachie into branch 'master'.

Remove the format preset combobox from UMS.

Multiple format presets are not supported anyway.

BUG: 285506

M  +3    -0    src/core-impl/collections/umscollection/UmsCollection.cpp
M  +2    -0    src/dialogs/FilenameLayoutDialog.h
M  +96   -88   src/dialogs/FilenameLayoutDialog.ui

http://commits.kde.org/amarok/232e7bdbeaa7ee2bd449c96039fe5832bfc022c8