Remove the format preset combobox from UMS.

Multiple format presets are not supported anyway.

BUG: 285506