src/core-impl/collections/umscollection/UmsCollection.cpp
@@ -499,6 +499,9 @@ UmsCollection::slotConfigure()
     QVBoxLayout layout( &umsSettingsDialog );
     layout.addWidget( &filenameLayoutDialog );
     settings->m_filenameSchemeBox->setLayout( &layout );
+    //hide the unuse preset selector.
+    //TODO: change the presets to concurent presets for regular albums v.s. compilations
+    filenameLayoutDialog.setformatPresetVisible( false );
 
     filenameLayoutDialog.setScheme( m_musicFilenameScheme );
     filenameLayoutDialog.setVfatCompatible( m_vfatSafe );
